--- a/test/fixtures/posts.yml
+++ b/test/fixtures/posts.yml
@@ -3,9 +3,10 @@
 # This model initially had no columns defined. If you add columns to the
 # model remove the '{}' from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
+hello_world:
+  body: Hello, world!
+  user_id: 1
+
 #
-one: {}
-# column: value
-#
-two: {}
+#two: {}
 # column: value
