add like integration tests

--- a/test/fixtures/likes.yml
+++ b/test/fixtures/likes.yml
@@ -4,8 +4,10 @@
 # model remove the '{}' from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-#one: {}
-# column: value
-#
-#two: {}
-# column: value
+david_like_hello_world:
+  user: david
+  post: hello_world
+
+emma_like_hello_world:
+  user: emma
+  post: hello_world
