add friend request integration tests

--- a/test/fixtures/friend_requests.yml
+++ b/test/fixtures/friend_requests.yml
@@ -1,1 +1,4 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+david_to_emma:
+  sending_user: david
+  receiving_user: emma
