add friendship integration tests

--- a/test/fixtures/friendships.yml
+++ b/test/fixtures/friendships.yml
@@ -4,8 +4,11 @@
 # model remove the '{}' from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-#one: {}
-# column: value
-#
-#two: {}
-# column: value
+
+mark_and_david:
+  friend_one: mark
+  friend_two: david
+
+david_and_emma:
+  friend_one: david
+  friend_two: emma
